--- a/task_manager/templates/home.html
+++ b/task_manager/templates/home.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
 {% block title %}Home{% endblock %}
-
 {% block content %}
+<div class="card">
+    <div class="card-body p-5 bg-white">
+        <div class="display-4 d-flex justify-content-center">Welcome to Task Manager</div>
+    </div>
+</div>
 {% endblock %}
