--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load i18n %}
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,14 +13,34 @@
 </head>
 <body class="bg-light">
     <div class="container py-5">
-        <h1 class="text-center mb-4">Welcome</h1>
         <div class="d-flex justify-content-left gap-3">
-            <a href="{% url 'home' %}" class='btn btn-primary'>Home</a>
-            <a href="{% url 'user_list' %}" class="btn btn-secondary">Users</a>
-            <a href="{% url 'login' %}" class="btn btn-success">Login</a>
-            <a href="{% url 'user_create' %}" class="btn btn-success">Register</a>
+            <a href="{% url 'home' %}" class='btn btn-primary'>Менеджер задач</a>
+            <a href="{% url 'user_list' %}" class="btn btn-secondary">Пользователи</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'status_list' %}" class="btn btn-success">Статусы</a>
+                <a href="{% url 'label_list' %}" class="btn btn-success">Метки</a>
+                <a href="{% url 'task_list' %}" class="btn btn-success">Задачи</a>
+                <form method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button class="btn btn-success" type="submit">Выход</button>
+                </form>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-success">Вход</a>
+                <a href="{% url 'user_create' %}" class="btn btn-success">Регистрация</a>
+            {% endif %}
         </div>
-        {% block content %}{% endblock %}
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.tags == 'success' %}
+                    <div style="margin: 20px;" class="alert alert-success alert-dismissible fade show" role="alert">{{ message }}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
+                {% elif message.tags == 'error' %}
+                    <div style="margin: 20px;" class="alert alert-danger alert-dismissible fade show" role="alert">{{ message }}<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+        <div style="margin: 20px;">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 </body>
 </html>
