Step 6-8, adding rollbar

--- a/task_manager/statuses/templates/status_list.html
+++ b/task_manager/statuses/templates/status_list.html
@@ -11,7 +11,7 @@
             <th>ID</th>
             <th>Имя</th>
             <th>Дата создания</th>
-            <th>кнопочки</th>
+            <th>Кнопки</th>
         </tr>
     </thead>
     <tbody>
