--- a/task_manager/tasks/templates/task_list.html
+++ b/task_manager/tasks/templates/task_list.html
@@ -41,7 +41,7 @@
             <th>Автор</th>
             <th>Исполнитель</th>
             <th>Дата создания</th>
-            <th>Кнопочки</th>
+            <th>Кнопки</th>
         </tr>
     </thead>
     {% if task_list %}
