--- a/task_manager/users/templates/user_list.html
+++ b/task_manager/users/templates/user_list.html
@@ -11,7 +11,7 @@
             <th scope="col">Имя пользователя</th>
             <th scope="col">Полное имя</th>
             <th scope="col">Дата создания</th>
-            <th scope="col">Кнопочки</th>
+            <th scope="col">Кнопки</th>
         </tr>
     </thead>
     <tbody>
